--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "express": "^4.16.4",
     "mongoose": "^5.5.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2"
+  },
   "description": ""
 }
