--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
-    "mongoose": "^5.5.4"
+    "fs": "0.0.1-security",
+    "mongoose": "^5.5.4",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
