--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "mongoose": "^5.5.4",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "stripe": "^6.31.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
